--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailDev":" npx tailwindcss -i ./src/css/tailwind.css -o ./src/css/estilos.css --watch"
+    "tailDev":" npx tailwindcss -i ./docs/src/css/tailwind.css -o ./docs/src/css/estilos.css --watch"
   },
   "keywords": [],
   "author": "",
